feat: Implementar endpoints para Historia de Usuario 1 (Interfaz y métodos de pago)
- Agregar 3 nuevos endpoints para soporte de frontend:
  * GET /api/pagos/payment-methods - Lista métodos de pago con logos y validaciones
  * POST /api/pagos/validate-payment-method - Validación de tarjetas con Algoritmo de Luhn
  * GET /api/pagos/session/:sessionId - Info de sesión con temporizador

- Implementar validaciones avanzadas (CA11-CA15):
  * Algoritmo de Luhn para números de tarjeta
  * Detección automática de tipo de tarjeta (Visa, Mastercard, Amex, etc.)
  * Validación de fecha de vencimiento (CA13)
  * Mensajes de error específicos por campo (CA12)

- Agregar SecurityContextMiddleware para extraer X-Session-ID y X-User-ID
- Agregar campos expiryMonth y expiryYear a CardSecurityData
- Actualizar PaymentConfirmationService con método getSessionInfo()
- Registrar SecurityContextMiddleware como primer middleware (orden crítico)
- Agregar carpeta docs/ al .gitignore

Criterios cumplidos: CA1, CA2, CA4, CA6, CA8-CA16 (Historia de Usuario 1)
Backend proporciona toda la información necesaria para implementación frontend

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 
+# Documentation
+docs/
+
 # OS
 .DS_Store
 Thumbs.db
@@ -283,3 +286,4 @@ mercadopago-test-data/
 # Webhooks testing
 webhook-test-data/
 ngrok-*/
+
