feat: Sistema completo de pagos con múltiples proveedores y seguridad PCI-DSS
 Nuevas Funcionalidades:
- Integración con Stripe, PayPal y Webpay (modo MOCK para desarrollo)
- Sistema de confirmación de monto con tokens temporales (5 min)
- Validación de CVV y datos de tarjeta (algoritmo de Luhn)
- Headers de seguridad (x-session-id, x-user-id) para auditoría
- Endpoints de usuario: /api/users/current y /api/users/cart
- Cálculo automático de IVA y totales desde backend
- Configuración de IVA y timeout de checkout en tax.config.json

 Seguridad:
- HTTPS/TLS 1.2+ obligatorio con certificados SSL
- CVV requerido pero NO almacenado (cumplimiento PCI-DSS)
- Límite de 3 intentos fallidos por sesión
- Auditoría completa de todas las transacciones
- Validación de coincidencia entre confirmación y procesamiento
- Middleware de seguridad para contexto de usuario/sesión

 Documentación:
- Swagger actualizado con headers de seguridad
- Guía de integración con Stripe (GUIA_INTEGRACION_STRIPE.md)
- Documentación de endpoints y ejemplos (SWAGGER_ACTUALIZADO.md)
- Configuración para producción documentada

 Arquitectura:
- Patrón Factory para procesadores de pago
- Separación por capas (presentation/application/domain/infrastructure)
- DTOs con validaciones completas (class-validator)
- Processors en modo MOCK listos para conectar APIs reales
- Servicios de confirmación y auditoría de seguridad

 Datos:
- JSON de usuario (usuario.json) con datos de prueba
- JSON de carrito (carrito.json) con productos y precios
- Configuración de impuestos y checkout (tax.config.json)

 Tecnologías:
- NestJS con TypeScript
- Swagger/OpenAPI para documentación
- Helmet para headers de seguridad
- CORS configurado para frontend local
- Throttler para rate limiting

 Nota: Actualmente en modo MOCK (desarrollo). Para producción:
- Instalar SDKs de proveedores (stripe, paypal-rest-sdk)
- Configurar API keys en variables de entorno
- Descomentar código real en processors
- Usar certificados SSL válidos (

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,13 @@ NODE_ENV=development
 PORT=3000
 
 # =========================================
+# CORS - Origenes permitidos
+# =========================================
+# En desarrollo, incluir el frontend local
+# En producción, especificar solo dominios autorizados
+ALLOWED_ORIGINS=https://localhost:3001,http://localhost:3001
+
+# =========================================
 # BASE DE DATOS - MongoDB
 # =========================================
 MONGODB_URI=mongodb://localhost:27017/payment_database
