--- a/.env
+++ b/.env
@@ -1,5 +1,20 @@
 NODE_ENV=development
 PORT=3000
+
+# Origenes permitidos para CORS (separados por comas)
+# Incluir tanto HTTP como HTTPS del frontend
+ALLOWED_ORIGINS=https://localhost:3001,http://localhost:3001
+
+# Base de datos MongoDB
 MONGODB_URI=mongodb://localhost:27017/gpi_database
+
+# JWT Configuration
 JWT_SECRET=EstoEsUnSecretoSuperSeguroParaElCursoGPI
 JWT_EXPIRES_IN=1d
+
+# Configuración de sesiones de pago
+PAYMENT_SESSION_TIMEOUT=600000
+MAX_PAYMENT_ATTEMPTS=3
+
+# Logs
+LOG_LEVEL=debug
