Instalacion de dependencias para mysql

--- a/.env
+++ b/.env
@@ -6,7 +6,11 @@ PORT=3000
 ALLOWED_ORIGINS=https://localhost:3001,http://localhost:3001
 
 # Base de datos MongoDB
-MONGODB_URI=mongodb://localhost:27017/gpi_database
+DB_HOST=localhost
+DB_PORT=3306
+DB_USERNAME=root
+DB_PASSWORD=
+DB_DATABASE=payment_database
 
 # JWT Configuration
 JWT_SECRET=EstoEsUnSecretoSuperSeguroParaElCursoGPI
