feat: v1.1.0 - Mejoras de seguridad, validación y UX
🔧 Fixes Críticos:
- Fix detección de actividad sospechosa por moneda (USD/CLP/EUR)
- Fix persistencia de nombre_titular y ultimos_cuatro_digitos
- Fix transiciones de estado de pago (PENDING→PROCESSING→FAILED)
- Fix campo fecha en historial_de_errores

✨ Nuevas Características:
- Simulación de errores con amount=666 para testing
- Validación CVV mejorada (max 4 dígitos, solo números)
- Captura de datos de tarjeta (last4Digits, cardHolderName)
- Detección inteligente de montos sospechosos por moneda

📝 Documentación:
- README actualizado (HU1: 85%, HU2: 95%)
- CHANGELOG.md creado con historial completo
- Swagger mejorado con testing e instrucciones
- Criterios de aceptación documentados

🔒 Seguridad:
- CVV nunca se almacena (PCI-DSS compliant)
- Controller sanitiza cardSecurity antes de persistir
- Auditoría mejorada con enmascaramiento por moneda

--- a/.env
+++ b/.env
@@ -5,12 +5,12 @@ PORT=3000
 # Incluir tanto HTTP como HTTPS del frontend
 ALLOWED_ORIGINS=https://localhost:3001,http://localhost:3001
 
-# Base de datos MongoDB
+# Base de datos MySQL
 DB_HOST=localhost
 DB_PORT=3306
 DB_USERNAME=root
-DB_PASSWORD=
-DB_DATABASE=payment_database
+DB_PASSWORD=Franko1892@
+DB_DATABASE=tite
 
 # JWT Configuration
 JWT_SECRET=EstoEsUnSecretoSuperSeguroParaElCursoGPI
