--- a/.env.example
+++ b/.env.example
@@ -16,9 +16,13 @@ PORT=3000
 ALLOWED_ORIGINS=https://localhost:3001,http://localhost:3001
 
 # =========================================
-# BASE DE DATOS - MongoDB
+# BASE DE DATOS - MySQL
 # =========================================
-MONGODB_URI=mongodb://localhost:27017/payment_database
+DB_HOST=localhost
+DB_PORT=3306
+DB_USERNAME=root
+DB_PASSWORD=
+DB_DATABASE=tite
 
 # =========================================
 # SEGURIDAD - JWT
